#15, #18: incorporated mock implementation as backend services for PDQ queries, Renamed two unit tests which were actually integration tests. Now running smoothly against the PDQ mocks :-)