@@ -57,5 +57,63 @@
 			<groupId>org.openehealth.ipf.commons</groupId>
 			<artifactId>ipf-commons-ihe-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.openehealth.coala</groupId>
+			<artifactId>coala-mocks</artifactId>
+			<version>0.1-SNAPSHOT</version>
+			<classifier>jar-with-dependencies</classifier>
+		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.3</version>
+            <configuration>
+                <tasks>
+                    <java fork="true" spawn="true" classpathref="maven.runtime.classpath" className="org.openehealth.coala.mocks.MainMock"/>
+                </tasks>
+            </configuration>
+            <executions>
+		        	<execution>
+		        		<id>run-mocks</id>
+		        		<phase>pre-integration-test</phase>
+		        		<goals>
+			              <goal>run</goal>
+			            </goals>
+		        	</execution>
+		        </executions>
+        </plugin>
+			<!-- <plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		        <artifactId>exec-maven-plugin</artifactId>
+		        <configuration>
+		          <executable>java</executable>
+		          <arguments>
+		            <argument>-Xms512m</argument>
+		            <argument>-Xmx512m</argument>
+		            <argument>-XX:NewRatio=3</argument>
+		            <argument>-XX:+PrintGCTimeStamps</argument>
+		            <argument>-XX:+PrintGCDetails</argument>
+		            <argument>-Xloggc:gc.log</argument>
+		            <argument>-classpath</argument>
+		            <classpath/>
+		            <argument>org.openehealth.coala.mocks.MainMock</argument>
+		          </arguments>
+		        </configuration>
+		        <executions>
+		        	<execution>
+		        		<id>run-mocks</id>
+		        		<phase>pre-integration-test</phase>
+		        		<goals>
+			              <goal>exec</goal>
+			            </goals>
+		        	</execution>
+		        </executions>
+		      </plugin>
+		       -->
+		</plugins>
+	</build>
 </project>
